aarch64: prefetch ignores cache line size

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b122
    • aarch64
    • linux

        The settings for Prefetch in vm_version_aarch64.cpp ignore the cache line size and assume it is 64. On some partners HW the cache line size is 128.

        For example AllocatePrefetchStepSize is set to a constant 64, which is plainly wrong as it should be set to at least 1 cache line size.

        The variables affected are

        AllocatePrefetchDistance
        AllocatePrefetchStepSize
        PrefetchScanIntervalInBytes
        PrefetchCopyIntervalInBytes

        Also, the checking code in vm_version_aarch64.cpp do you allow you to set the value of PrefetchCopyIntervalInBytes to -1 on the command line, but instead give an error if this is attempted.

        Also, the current implementation does store prefetches before STXR for all partners implementations whereas this is only applicable to ARM A57 implementation.

              Assignee:
              Ed Nevill
              Reporter:
              Ed Nevill
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: