8157841: aarch64: prefetch ignores cache line size

Fix prefetch to take account of cache line size

Co-authored-by: Stuart Monteith <stuart.monteith@linaro.org>
Reviewed-by: aph